<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/preference_jump_category_title"
        android:summary="@string/preference_jump_category_summary"
        >

        <EditTextPreference
            android:key="default_jump_altitude"
            android:dialogTitle="@string/preference_jump_altitude_dialog_title"
            android:summary="@string/preference_jump_altitude_summary"
            android:title="@string/preference_jump_altitude_title"
            />

        <EditTextPreference
            android:key="default_jump_delay"
            android:dialogTitle="@string/preference_jump_delay_dialog_title"
            android:summary="@string/preference_jump_delay_summary"
            android:title="@string/preference_jump_delay_dialog_title"
            />

        <org.tomcurran.logbook.ui.preference.PlaceListPreference
            android:key="default_place"
            android:dialogTitle="@string/preference_place_dialog_title"
            android:summary="@string/preference_place_summary"
            android:title="@string/preference_place_dialog_title"
            />

        <org.tomcurran.logbook.ui.preference.AircraftListPreference
            android:key="default_aircraft"
            android:dialogTitle="@string/preference_aircraft_dialog_title"
            android:summary="@string/preference_aircraft_summary"
            android:title="@string/preference_aircraft_dialog_title"
            />

        <org.tomcurran.logbook.ui.preference.EquipmentListPreference
            android:key="default_equipment"
            android:dialogTitle="@string/preference_equipment_dialog_title"
            android:summary="@string/preference_equipment_summary"
            android:title="@string/preference_equipment_dialog_title"
            />

    </PreferenceCategory>

</PreferenceScreen>